[metadata]
name = owoifier
version = attr: owoifier.__version__
url = https://github.com/FernOfSigma/owoifier
project_urls =
	Homepage = https://github.com/FernOfSigma/owoifier
	Source Code = https://github.com/FernOfSigma/owoifier
	Bug Tracker = https://github.com/FernOfSigma/owoifier/issues
author = FernOfSigma
author_email = 90320595+FernOfSigma@users.noreply.github.com
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Text Processing
	Typing :: Typed
license = GPL-3.0-or-later
license_files =
	LICENSE
description = Translates English text to OwO using magic.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
packages = find:

[options.entry_points]
console_scripts =
	owoifier = owoifier._cli:main
